modify category to have id
